fixed grid spacing on navbar

--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,4 +1,4 @@
 .fixedButton {
-  top: 13px;
-  right: 10px;
+  top: 0.8125rem;
+  right: 1.5rem;
 }
